--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal_site",
-  "homepage": "https://yangsiming99.github.io/Portfolio/",
+  "homepage": "https://yangsiming99.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
