updated link to site

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal_site",
-  "homepage": "https://yangsiming99.github.io/Portfolio",
+  "homepage": "https://simonyang99.github.io/Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
