--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal_site",
-  "homepage": "https://simonyang99.github.io/Portfolio/",
+  "homepage": "https://yangsiming99.github.io/Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
